webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      port: 13317 #服务本身的端口
      targetPort: 3306
      nodePort: 30002 #外部访问端口 端口 30000起
  type: LoadBalancer
