webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 16389
      #redis 端口
      targetPort: 6379
      nodePort: 30003  #30000万起 对外端口
  type: NodePort
