webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
#    - host 是live.webook.com 的时候，命中我这条
    - host: live.webook.local
      http:
        paths:
#          请求路径是/的时候，将流量转发到后面的webook服务上，端口是88
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webook
                port:
                  number: 88
